public interface QuestReward
{
    public void RewardPlayer();
    public string ToString();
}
